fix(RV-35) styles in all web page

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,5 +2,8 @@
 
 @theme {
   --font-briem-hand: "briem-hand", sans-serif;
-  --font-afacad: "Afacad", sans-serif;
+  -
+  -font-afacad: "Afacad", sans-serif;
 }
+
+
